--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
     <main>
         <section id="telefone">
             <iframe src="home.html" frameborder="0" name="tela" id="tela">
-                
+
             </iframe>
         </section>
         <section id="redes">
-
+            <a href=""><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href=""><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+            <a href=""><img src="imagens/logo-github.jpg" alt="Github"></a><br>
+            <a href=""><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href=""><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href=""><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br>
         </section>
     </main>
 </body>
