--- a/Paginas/youtube.html
+++ b/Paginas/youtube.html
@@ -10,9 +10,15 @@
             margin: 0;
             font-family: Arial, Helvetica, sans-serif;
         }
+
+        ::-webkit-scrollbar{
+            width: 0;
+            height: 0;
+        }
         
         img{
-
+          
+            width: 100vw;
         }
 
         a{
@@ -24,10 +30,14 @@
             text-decoration: none;
             color: white;
         }
+
+        a:hover{
+            background-color: red;
+        }
     </style>
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="Youtube">
+    <img src="../imagens/tela-youtube.png" alt="Youtube">
     <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">Acesse</a>
 
 </body>
