--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             </iframe>
         </section>
         <section id="redes">
-            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
-            <a href="" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
-            <a href="" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
-            <a href="" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
-            <a href="" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
-            <a href="" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br>
+            <a href="Paginas/home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="Paginas/youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+            <a href="Paginas/github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
+            <a href="Paginas/instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="Paginas/twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="Paginas/facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br>
         </section>
     </main>
 </body>
